@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4Win32.hh,v 1.3 1999-05-07 10:34:11 barrand Exp $
+// $Id: G4Win32.hh,v 1.4 1999-11-02 21:16:18 barrand Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //  To unify Windows message treatment between 
@@ -21,6 +21,14 @@
 #include <windowsx.h>
 
 #include "G4VInteractorManager.hh"
+
+// Class description :
+//
+//  G4Win32 : a singleton to handle GUI sessions and visualization 
+// drivers built over Windows. It permits to have one Windows main 
+// loop for the whole application. 
+//
+// Class description - end :
 
 class G4Win32 : public G4VInteractorManager {
 public:
