@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4Xt.hh,v 1.2 1999-04-13 01:26:31 yhajime Exp $
+// $Id: G4Xt.hh,v 1.3 1999-11-02 21:16:21 barrand Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //  To unify X11 event treatment between 
@@ -21,15 +21,24 @@
 
 #include "G4VInteractorManager.hh"
 
+// Class description :
+//
+//  G4Xt : a singleton to handle GUI sessions and visualization 
+// drivers built over Xt. It permits to have one Xt main loop for 
+// the whole application. The Xt toolkit is inited in the 
+// constructor. It is done once for the whole application.
+//
+// Class description - end :
+
 class G4Xt : public G4VInteractorManager {
 public:
-  static G4Xt* getInstance                 ();
-  static G4Xt* getInstance                 (int,char**,char*);
-  void         PutStringInResourceDatabase (char*);
-  G4bool       Inited                      ();
-  void*        GetEvent                    ();
-  void         FlushAndWaitExecution       ();
-  virtual     ~G4Xt                        ();                     
+  static G4Xt* getInstance();
+  static G4Xt* getInstance(int,char**,char*);
+  void PutStringInResourceDatabase(char*);
+  G4bool Inited();
+  void* GetEvent();
+  void FlushAndWaitExecution();
+  virtual ~G4Xt();                     
 private:
   G4Xt (int,char**,char*);                     
   static G4Xt* instance; // Pointer to single instance.
