@@ -1,4 +1,4 @@
-$Id: History,v 1.16 1999-11-02 20:11:44 barrand Exp $
+$Id: History,v 1.17 1999-11-02 21:19:08 barrand Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -18,9 +18,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
 
 02 Nov 1999 Guy Barrand
+- doc comments for G4UIWin32.hh, G4UIXm.hh, G4UIXaw.hh, G4Xt.hh, G4Win32.hh, G4VInterativeSession.hh, G4VInteractorManager.hh.
+
+02 Nov 1999 Guy Barrand
 - basic/G4UIWin32, G4UIXm : RW -> STL.
 - common/G4VBasicShell, G4VInteractiveSession, G4VInteractorManager : RW -> STL.
-
 29 Oct. 1999 Hajime Yoshida
 - tag interfaces-V00-01-01
 
